vcnc-rest: implementation for /grid/jobs REST API, including error handling
